# vxx_trade

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  NOTES.md  README.md  pyproject.toml  requirements.txt
src/notebook_explorations/: Categorization Exploration.ipynb  strategy_exploration.ipynb
src/vxx_trade/: Categorization Exploration.ipynb  __init__.py  _utils.py  backtester.py  categorizing_data.py  classifier.py  clustering.py  data_generator.py  dimension_reduction.py  pca.py  scaling.py  strategy_exploration.ipynb  target.py  trade_exploratory.py  walkforward.py  winsorization.py
src/vxx_trade/json/: data_generator.json  matplotlib_style.json  strategy_exploratory.json
