[project]
name = "vxx_trade"
version = "0.0.4"
authors = [
  { name="Laurent Lanteigne", email="laurent.lanteigne@gmail.com" },
]
dependencies = [
  "polars==1.14.0",
  "numpy==2.1.3",
  "scipy==1.14.1",
  "matplotlib==3.9.2"
]
description = "VXX Trading Strategy"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
vxx_trade = ["json/*.json", "data/*.parquet", "images/*.png"]

[project.scripts]
generate_trading_data = "vxx_trade.data_generator:generate_data_for_strategy"
